줌 슬라이더 추가

--- a/index.html
+++ b/index.html
@@ -60,9 +60,17 @@
             transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
             z-index: 15;
         }
-        .opacity-slider {
+        .zoom-slider {
             position: absolute;
             top: 5%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            z-index: 30;
+        }
+        .opacity-slider {
+            position: absolute;
+            top: 11%;
             left: 50%;
             transform: translateX(-50%);
             width: 80%;
