--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 <body>
 
     <div class="container" id="cameraContainer">
+        <input type="range" id="zoomSlider" class="zoom-slider" min="1" max="3" step="0.1" value="1">
         <input type="range" id="opacitySlider" class="opacity-slider" min="0" max="1" step="0.05" value="0.5">
         <video id="camera" autoplay playsinline></video>
         <img id="overlay" src="" alt="Overlay Image">
@@ -134,12 +135,14 @@
     const captureBtn = document.getElementById("capture");
     const aspectToggle = document.getElementById("aspectToggle");
     const opacitySlider = document.getElementById("opacitySlider");
+    const zoomSlider = document.getElementById("zoomSlider");
 
     let isRotated = false;
     let fitMode = "width";
     let isWideMode = false;
     let originalImage = null;
     let mediaRecorder;
+    let videoTrack = null;
     let recordedChunks = [];
     let isRecording = false;
     let clickTimer = null; // 클릭 타이머 변수
@@ -159,6 +162,31 @@
     .then(stream => {
         video.srcObject = stream;
         video.onloadedmetadata = () => video.play();
+        videoTrack = stream.getVideoTracks()[0];
+
+        if (videoTrack && typeof videoTrack.getCapabilities === "function") {
+            const caps = videoTrack.getCapabilities();
+            if (caps && caps.zoom) {
+                zoomSlider.min = caps.zoom.min;
+                zoomSlider.max = caps.zoom.max;
+                zoomSlider.step = caps.zoom.step || 0.1;
+                const settings = videoTrack.getSettings();
+                zoomSlider.value = settings.zoom ?? caps.zoom.min;
+
+                zoomSlider.addEventListener("input", async () => {
+                    const zoomValue = parseFloat(zoomSlider.value);
+                    try {
+                        await videoTrack.applyConstraints({ advanced: [{ zoom: zoomValue }] });
+                    } catch (error) {
+                        console.error("Zoom apply failed:", error);
+                    }
+                });
+            } else {
+                zoomSlider.style.display = "none";
+            }
+        } else {
+            zoomSlider.style.display = "none";
+        }
     })
     .catch(err => {
         console.error("카메라 접근 실패:", err);
